--- a/TaskManager/src/app/sign-up/sign-up.component.html
+++ b/TaskManager/src/app/sign-up/sign-up.component.html
@@ -13,35 +13,50 @@
           <div class="form-group form-row" formGroupName="personName">
             <label for="firstName" class="col-md-4 col-form-label">First Name:</label>
             <div class="col-md-8">
-              <input type="text" name="firstName" id="firstName" placeholder="First Name" class="form-control" formControlName="firstName">
+              <input type="text" name="firstName" id="firstName" placeholder="First Name" class="form-control" formControlName="firstName" [ngClass]="{
+                'is-invalid': signUpForm.get('personName.firstName').invalid && (signUpForm.get('personName.firstName').dirty || signUpForm.get('personName.firstName').touched || signUpForm.submitted),
+
+                'is-valid': signUpForm.get('personName.firstName').valid && (signUpForm.get('personName.firstName').dirty || signUpForm.get('personName.firstName').touched || signUpForm.submitted) }">
             </div>
           </div>
 
           <div class="form-group form-row" formGroupName="personName">
             <label for="lastName" class="col-md-4 col-form-label">Last Name:</label>
             <div class="col-md-8">
-              <input type="text" name="lastName" id="lastName" placeholder="Last Name" class="form-control" formControlName="lastName">
+              <input type="text" name="lastName" id="lastName" placeholder="Last Name" class="form-control" formControlName="lastName"  [ngClass]="{
+                'is-invalid': signUpForm.get('personName.lastName').invalid && (signUpForm.get('personName.lastName').dirty || signUpForm.get('personName.lastName').touched || signUpForm.submitted),
+
+                'is-valid': signUpForm.get('personName.lastName').valid && (signUpForm.get('personName.lastName').dirty || signUpForm.get('personName.lastName').touched || signUpForm.submitted) }">
             </div>
           </div>
 
           <div class="form-group form-row">
             <label for="email" class="col-md-4 col-form-label">Email:</label>
             <div class="col-md-8">
-              <input type="text" name="email" id="email" placeholder="Email" class="form-control" formControlName="email">
+              <input type="text" name="email" id="email" placeholder="Email" class="form-control" formControlName="email"  [ngClass]="{
+                'is-invalid': signUpForm.get('email').invalid && (signUpForm.get('email').dirty || signUpForm.get('email').touched || signUpForm.submitted),
+
+                'is-valid': signUpForm.get('email').valid && (signUpForm.get('email').dirty || signUpForm.get('email').touched || signUpForm.submitted) }">
             </div>
           </div>
 
           <div class="form-group form-row">
             <label for="mobile" class="col-md-4 col-form-label">Mobile:</label>
             <div class="col-md-8">
-              <input type="text" name="mobile" id="mobile" placeholder="Mobile" class="form-control" formControlName="mobile">
+              <input type="text" name="mobile" id="mobile" placeholder="Mobile" class="form-control" formControlName="mobile"  [ngClass]="{
+                'is-invalid': signUpForm.get('mobile').invalid && (signUpForm.get('mobile').dirty || signUpForm.get('mobile').touched || signUpForm.submitted),
+
+                'is-valid': signUpForm.get('mobile').valid && (signUpForm.get('mobile').dirty || signUpForm.get('mobile').touched || signUpForm.submitted) }">
             </div>
           </div>
 
           <div class="form-group form-row">
             <label for="dateOfBirth" class="col-md-4 col-form-label">Date of Birth:</label>
             <div class="col-md-8">
-              <input type="date" name="dateOfBirth" id="dateOfBirth" placeholder="Date of Birth" class="form-control" formControlName="dateOfBirth">
+              <input type="date" name="dateOfBirth" id="dateOfBirth" placeholder="Date of Birth" class="form-control" formControlName="dateOfBirth"  [ngClass]="{
+                'is-invalid': signUpForm.get('dateOfBirth').invalid && (signUpForm.get('dateOfBirth').dirty || signUpForm.get('dateOfBirth').touched || signUpForm.submitted),
+
+                'is-valid': signUpForm.get('dateOfBirth').valid && (signUpForm.get('dateOfBirth').dirty || signUpForm.get('dateOfBirth').touched || signUpForm.submitted) }">
             </div>
           </div>
 
@@ -60,7 +75,10 @@
           <div class="form-group form-row">
             <label for="countryID" class="col-md-4 col-form-label">Country:</label>
             <div class="col-md-8">
-              <select name="countryID" id="countryID" class="form-control" formControlName="countryID">
+              <select name="countryID" id="countryID" class="form-control" formControlName="countryID"  [ngClass]="{
+                'is-invalid': signUpForm.get('countryID').invalid && (signUpForm.get('countryID').dirty || signUpForm.get('countryID').touched || signUpForm.submitted),
+
+                'is-valid': signUpForm.get('countryID').valid && (signUpForm.get('countryID').dirty || signUpForm.get('countryID').touched || signUpForm.submitted) }">
                 <option value="null">Please Select</option>
                 <option *ngFor="let country of countries" [value]="country.countryID">
                   {{country.countryName}}
@@ -83,11 +101,17 @@
               <div class="row" *ngFor="let skill of signUpForm.get('skills').controls; let i = index" [formGroupName]="i">
 
                 <div class="col-5">
-                  <input type="text" name="skillName" id="skillName" placeholder="Skill Name" formControlName="skillName" class="form-control">
+                  <input type="text" name="skillName" id="skillName" placeholder="Skill Name" formControlName="skillName" class="form-control" [ngClass]="{
+                    'is-invalid': signUpForm.get('skillName').invalid && (signUpForm.get('skillName').dirty || signUpForm.get('skillName').touched || signUpForm.submitted),
+
+                    'is-valid': signUpForm.get('skillName').valid && (signUpForm.get('skillName').dirty || signUpForm.get('skillName').touched || signUpForm.submitted) }">
                 </div>
 
                 <div class="col-4">
-                  <select name="level" id="level" formControlName="level" class="form-control">
+                  <select name="level" id="level" formControlName="level" class="form-control"  [ngClass]="{
+                    'is-invalid': signUpForm.get('level').invalid && (signUpForm.get('level').dirty || signUpForm.get('level').touched || signUpForm.submitted),
+
+                    'is-valid': signUpForm.get('level').valid && (signUpForm.get('level').dirty || signUpForm.get('level').touched || signUpForm.submitted) }">
                     <option value="null">Please Select</option>
                     <option value="Beginner">Beginner</option>
                     <option value="Intermediate">Intermediate</option>
